--- a/02timer.html
+++ b/02timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
-    <link rel="stylesheet" href="css/timer.css">
+    <link rel="stylesheet" href="css/02timer.css">
 </head>
 <body>
     <div id="timer">
@@ -15,7 +15,7 @@
             <button id="stop" onclick="stopTimer()">STOP</button>
             <button id="reset" onclick="resetTimer()">RESET</button>
         </div>
-        <script src="js/timer.js"></script>
+        <script src="js/02timer.js"></script>
     </div>
 </body>
 </html>
