[04]이전 일 중복 오류 수정

--- a/04calendar.html
+++ b/04calendar.html
@@ -9,9 +9,9 @@
 <body>
     <div class="calendar">
         <div class="top">
-            <input type="button" id="prevMonth" onclick="prevMonth()" value="<">
+            <button id="prevMonth" onclick="prevMonth()"><</button>
             <span id="currentDate">0000년00월00일</span>
-            <input type="button" id="nextMonth" onclick="nextMonth()" value=">">
+            <button id="nextMonth" onclick="nextMonth()">></button>
         </div>
         <div class="main">
             <div class="days">
