--- a/04calendar.html
+++ b/04calendar.html
@@ -27,8 +27,6 @@
         <div class="dates"></div>
     </div>
 
-    <script src="js/04calendar.js">
-       
-    </script>
+    <script src="js/04calendar.js"></script>
 </body>
 </html>
