[05] 이미지 추가

--- a/05clone.html
+++ b/05clone.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="miniintern.png" id="logo">
+        <img src="img/miniintern.png" alt="미니인턴 로고 이미지" id="logo"/>
         <ul id="content-category">
             <li name="미니인턴">미니인턴</li>
             <li name="스킬업">스킬업</li>
@@ -24,7 +24,15 @@
         </ul>
     </div>
 
-    <div class=""></div>
+    <div class="main">
+        <div class="banner">
+            <img src="img/main_img_1.webp" id="main_img_1" alt="미니인턴 배너 이미지"/>
+            <!-- <span id="main_img_1_font" color ="white">최대한의 효율로 직무경험을 쌓아보세요</span> -->
+            <img src="img/main_img_r_1_T_temporary_small.png" id="main_img_r_1_T_temporary_small" alt="작은 배너"/>
+        </div>
+
+    </div>
+
     <div class=""></div>
 
 
