[05] 배너이미지, 카테고리 폰트 컬러

--- a/05clone.html
+++ b/05clone.html
@@ -17,10 +17,10 @@
             <li name="해피폴리오">해피폴리오</li>
         </ul>
         <ul id="subcategory">
-            <li name="서비스 소개" id="subcategory">서비스 소개</li>
-            <li name="회원가입" id="subcategory">회원가입</li>
-            <li name="로그인" id="subcategory">로그인</li>
-            <li name="기업회원" id="subcategory">기업회원</li>
+            <li name="서비스 소개">서비스 소개</li>
+            <li name="회원가입" id="sign-up">회원가입</li>
+            <li name="로그인" id="login">로그인</li>
+            <li name="기업회원" id="guest">기업회원</li>
         </ul>
     </div>
 
@@ -30,7 +30,7 @@
             <!-- <span id="main_img_1_font" color ="white">최대한의 효율로 직무경험을 쌓아보세요</span> -->
             <img src="img/main_img_r_1_T_temporary_small.png" id="main_img_r_1_T_temporary_small" alt="작은 배너"/>
         </div>
-
+        
     </div>
 
     <div class=""></div>
