--- a/05clone.html
+++ b/05clone.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="css/05clone.css">
 </head>
@@ -30,10 +30,63 @@
             <!-- <span id="main_img_1_font" color ="white">최대한의 효율로 직무경험을 쌓아보세요</span> -->
             <img src="img/main_img_r_1_T_temporary_small.png" id="main_img_r_1_T_temporary_small" alt="작은 배너"/>
         </div>
-        
     </div>
 
-    <div class=""></div>
+    <div class="subject">
+        <div id="subject-title">미니인턴으로 취업하세요
+            <img src="img/questionImg.jpeg" id="questionImg"/>
+        </div>
+        <div id="subject-descript">이제 집, 학교, 도서관, 카페에서 인턴십을 경험하고, 실무역량평가로 취업하세요</div>
+        <div id="detail-table">
+            <ul class="details">
+                <li>
+                    <article>
+                        <img class="details" src="img/sangsang.png"/>
+                        <div>온라인 커리어 플랫폼 '워크위즈'의 콘텐츠 기획 및 운영</div>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/funding.png"/>
+                        <div>펀딩프로젝트 웹 상세 페이지 기획 및 디자인</div>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/haengin.png"/>
+                        <div>행사인력 구인구직 서비스 기업 '행아웃' CI 디자인 제안</div>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/aroundBody.png"/>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/tree.png"/>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/cloud.png"/>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/one.png"/>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img class="details" src="img/lion.png"/>
+                    </article>
+                </li>
+            </ul>
+        </div>
+        
+        </div>
+    </div>
 
 
     <script src="js/05clone.js"></script>
