--- a/05clone.html
+++ b/05clone.html
@@ -42,44 +42,49 @@
                 <li>
                     <article>
                         <img class="details" src="img/sangsang.png"/>
-                        <div>온라인 커리어 플랫폼 '워크위즈'의 콘텐츠 기획 및 운영</div>
+                        <div class="details-title">온라인 커리어 플랫폼 '워크위즈'의 콘텐츠 기획 및 운영</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/funding.png"/>
-                        <div>펀딩프로젝트 웹 상세 페이지 기획 및 디자인</div>
+                        <div class="details-title">펀딩프로젝트 웹 상세 페이지 기획 및 디자인</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/haengin.png"/>
-                        <div>행사인력 구인구직 서비스 기업 '행아웃' CI 디자인 제안</div>
+                        <div class="details-title">행사인력 구인구직 서비스 기업 '행아웃' CI 디자인 제안</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/aroundBody.png"/>
+                        <div class="details-title">스타트업 특성을 고려한 사업비 예산 수립 및 지출 관리 효율화 방안 제안</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/tree.png"/>
+                        <div class="details-title">뷰티 브랜드 트리앤씨의 SNS 마케팅 콘텐츠 제작 및 카피라이팅</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/cloud.png"/>
+                        <div class="details-title">구름맨션 마인드셋 키트 판매를 위한 제품 상세페이지 기획 및 디자인</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/one.png"/>
+                        <div class="details-title">유입된 고객의 전환율을 높이기 위한 웹 페이지 UI/UX 개선</div>
                     </article>
                 </li>
                 <li>
                     <article>
                         <img class="details" src="img/lion.png"/>
+                        <div class="details-title">자산 관리 서비스  ‘블루버튼’을 효과적으로 알릴 수 있는 피드 광고 콘텐츠 기획</div>
                     </article>
                 </li>
             </ul>
