[06] 캐러셀 슬라이드

--- a/06caroucel.html
+++ b/06caroucel.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="css/06caroucel.css">
 </head>
 <body>
-    <div class="caroucel">
-        <div class="content-list">
-            <div class="imgs">
-                <img src="img/HOWL.jpeg"/>
-            </div>
-            <div class="imgs">
-                <img src="img/chihiro049.jpg"/>
-            </div>
-            <div class="imgs">
-                <img src="img/kimitachi007.jpg"/>
+    <div id="main">
+        <div class="caroucel">
+            <div class="content-list">
+                <div class="imgs">
+                    <img src="img/HOWL.jpeg"/>
+                </div>
+                <div class="imgs">
+                    <img src="img/chihiro049.jpg"/>
+                </div>
+                <div class="imgs">
+                    <img src="img/kimitachi007.jpg"/>
+                </div>
             </div>
         </div>
+        <button id="prevBtn" type="button">&lt;&lt;</button>
+        <button id="nextBtn" type="button">&gt;&gt;</button>
     </div>
-    <button id="prevBtn" type="button">&lt;&lt;</button>
-    <button id="nextBtn" type="button">&gt;&gt;</button>
     <script src="js/06caroucel.js"></script>
 </body>
 </html>
