--- a/07caroucel.html
+++ b/07caroucel.html
@@ -9,14 +9,14 @@
 <body>
     <div class="caroucel-wrapper">
         <button type="button" id="prevBtn"><</button>
-        <span class="content">
-            <span class="imgs">
+        <div class="content">
+            <div class="imgs">
                 <img src="img/chihiro049.jpg"/>
                 <img src="img/HOWL.jpeg"/>
-                <img src="img/kimitachi007.jpg">
-            </span>
+                <img src="img/kimitachi007.jpg"/>
+            </div>
             <button type="button" id="nextBtn">></button>
-        </span>
+        </div>
     </div>
 
     <script src="js/07caroucel.js"></script>
