[08]이미지 위 텍스트 추가

--- a/08car-clone.html
+++ b/08car-clone.html
@@ -32,9 +32,18 @@
                 <button type="button" id="prevBtn"><</button>
                 <div class="content">
                     <div class="imgs">
-                        <img src="img/chihiro049.jpg"/>
-                        <img src="img/HOWL.jpeg"/>
-                        <img src="img/kimitachi007.jpg"/>
+                        <div>
+                            <span class="banner-text">테스트 1</span>
+                            <img src="img/chihiro049.jpg">
+                        </div>
+                        <div>
+                            <span class="banner-text">테스트 2</span>
+                            <img src="img/HOWL.jpeg"/>
+                        </div>
+                        <div>
+                            <span class="banner-text">테스트 3</span>
+                            <img src="img/kimitachi007.jpg"/>
+                        </div>
                     </div>
                 </div>
                 <button type="button" id="nextBtn">></button>
