--- a/09nav.html
+++ b/09nav.html
@@ -20,17 +20,18 @@
                     </ul>
                 </nav>
             </div>
-
-            <div class="show-menu">
-                <ul class="show-menu">
-                    <li class="nav-item">Home</li>
-                    <li class="nav-item">About</li>
-                    <li class="nav-item">Contact</li>
-                    <li class="nav-item">FAQ</li>
-                </ul>
-            </div>
         </div>
+        
     </header>
+
+    <div>
+        <ul class="side-menu">
+            <li class="side-item">Home</li>
+            <li class="side-item">About</li>
+            <li class="side-item">Contact</li>
+            <li class="side-item">FAQ</li>
+        </ul>
+    </div>
 
     <script src="js/09nav.js"></script>
 </body>
